[gd_scene load_steps=6 format=3 uid="uid://lrverdqosub2"]

[ext_resource type="Script" path="res://scripts/toolbox.gd" id="1_rcodo"]
[ext_resource type="PackedScene" uid="uid://btujq7423kuwp" path="res://moves/heal/HealBasic.tscn" id="2_tx7k1"]
[ext_resource type="PackedScene" uid="uid://b7pnotr0dgx2q" path="res://moves/attack/AttackBasic.tscn" id="3_rama0"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_cqnyk"]
bg_color = Color(0.0784314, 0.0784314, 0.0784314, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_m0v5m"]
bg_color = Color(1, 0, 0, 1)

[node name="toolbox" type="VBoxContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_rcodo")

[node name="ToolButtons" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="LevelButton" type="Button" parent="ToolButtons"]
layout_mode = 2
text = "Level Up!"

[node name="DamageButton" type="Button" parent="ToolButtons"]
layout_mode = 2
text = "Damage"

[node name="HealingButton" type="Button" parent="ToolButtons"]
layout_mode = 2
text = "Heal"

[node name="StatLabel" type="Label" parent="."]
layout_mode = 2

[node name="HealthBar" type="ProgressBar" parent="."]
custom_minimum_size = Vector2(0, 32)
layout_mode = 2
theme_override_styles/background = SubResource("StyleBoxFlat_cqnyk")
theme_override_styles/fill = SubResource("StyleBoxFlat_m0v5m")

[node name="ResultLabel" type="Label" parent="."]
layout_mode = 2

[node name="ResultTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="MoveList" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="BaseMove" parent="MoveList" instance=ExtResource("2_tx7k1")]
layout_mode = 2

[node name="BaseMove2" parent="MoveList" instance=ExtResource("3_rama0")]
layout_mode = 2

[connection signal="timeout" from="ResultTimer" to="." method="_on_timer_timeout"]
